--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/index.css">
     <script src="script/mainGame.js"></script>
+    <script src="script/sprites.js"></script>
     <title>Trabalho Jogo</title>
 </head>
 <body>
