--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/index.css">
     <script src="script/mainGame.js"></script>
     <script src="script/sprites.js"></script>
+    <script src="script/colisao.js"></script>
     <title>Trabalho Jogo</title>
 </head>
 <body>
