--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
                 <button class="menuGame" id="menuGame_Sair">Sair</button>
             </menu>
             <menu id="opsMenu">
-                <h2>Opções</h2>
-                <button class="menuGame" id="opsDif_Volta">Voltar</button>
+                <div id="voltar">                
+                    <button class="menuGame" id="opsDif_Volta">Voltar</button>
+
+                    <h2>Opções</h2>
+                </div>
+                
                 <div>
                     <h3>Dificultade:</h3>
                     <button id="opsDif_Facil" >Facil</button>
