começo do estilo

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <h1>Jogo Feito Para a Fatec</h1>
         </header>
         <main>
-            <menu id="menuGame">
+            <menu class='0'id="menuGame">
                 <h2>Menu</h2>
                 <button class="menuGame" id="menuGame_Iniciar">Iniciar</button>
                 <button class="menuGame" id="menuGame_Opsoe">Opções</button>
                 <button class="menuGame" id="menuGame_Sair">Sair</button>
             </menu>
-            <menu id="opsMenu">
+            <menu class="opsMenu" id="opsMenu">
                 <div id="voltar">                
                     <button class="menuGame" id="opsDif_Volta">Voltar</button>
 
