basicamente um jogo
funcionalidade:

    *win/lose = true;

    *score = true;

    *menu e ops = true;

resumindo ja é um jogo, apesar de ainda estar muito cru;

--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 <body>
     <div class="container">
         <header>
-            <h1>Jogo Feito Para a Fatec</h1>
+            <h1>BREAKOUT</h1>
         </header>
         <main>
-            <menu class='0'id="menuGame">
+            <menu class='menuInicial'>
                 <h2>Menu</h2>
-                <button class="menuGame" id="menuGame_Iniciar">Iniciar</button>
-                <button class="menuGame" id="menuGame_Opsoe">Opções</button>
-                <button class="menuGame" id="menuGame_Sair">Sair</button>
+                <button id="iniciar">Iniciar</button>
+                <button id="opcoe">Opções</button>
+                <button id="sair">Sair</button>
             </menu>
-            <menu class="opsMenu" id="opsMenu">
+            <menu class="ops">
                 <div id="voltar">                
-                    <button class="menuGame" id="opsDif_Volta">Voltar</button>
+                    <button id="opsDif_Volta">Voltar</button>
 
                     <h2>Opções</h2>
                 </div>
