--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
                 </div>
                 
             </menu>
-            <canvas></canvas>
+            <canvas class="canvasJogo"></canvas>
+            <aside>
+                <canvas class="canvasScore"></canvas>
+            </aside>
+            
         </main>
         <footer>
             <p>Criado por Allan Gaiteiro</p>
