--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 </div>
                 
             </menu>
-            <canvas class="canvasJogo"></canvas>
-            <aside>
-                <canvas class="canvasScore"></canvas>
+            <aside id="ranking">Aki Tera o Ranking
             </aside>
+            <canvas class="canvasJogo"></canvas>
+            <canvas id="painel"></canvas >
             
         </main>
         <footer>
